hphp/hack/test/typecheck/re_prefixed_string/regex_flags.php.exp
File "regex_flags.php", line 5, characters 13-26:
Bad regex pattern; character value in \x{} or \o{} is too large [9]. (Typing[4275])
